Fix --cdplay command line option

First, avoid touching MainWindow member variables before MainWindow is
constructed to avoid immediate segfault.

Second, don't try casting cd collection to MemoryCollection, which it doesn't
inherit (at least anymore). Casting to MediaDeviceCollection actually works.
Hard to tell since when this has been broken, but most of relevant code seems
to be last changed in 2010 or earlier, so possibly a while.

BUG: 482463

BUG: 279188